Fixes made to the UI to make the UX more enjoyable, fixed formatting issue on mobile devices

--- a/clients/web/react/src/_components/component.module.css
+++ b/clients/web/react/src/_components/component.module.css
@@ -59,3 +59,10 @@
   text-align: center; 
   padding: 1em 0em;
 }
+
+.appText {
+  @media screen and (max-width: 767px) {
+      font-size: 2.5rem;
+      background-color: #9aca3c;
+  }
+}
